# ping-pong

./: Makefile  cli.py  pyproject.toml
src/: factory.py  logger.py  pinger.py
