[project]
name = "dataloop-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "typer>=0.13.0",
    "uvicorn>=0.32.0",
]

[tool.ruff]
target-version = "py312"

lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C4", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B026", # star-arg unpacking after a keyword argument is strongly discouraged
]

#[tool.ruff.lint.isort]
#known-third-party = ["fastapi", "starlette", "sqlalchemy", "pydantic", "pydantic-settings"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`
keep-runtime-typing = true

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
